<resources>
    <string name="app_name">Habit+</string>
    <string name="app_name_rus">Трекер привычек</string>
    <string name="app_about_rus">Мобильный трекер привычек</string>
    <string name="title_list">Список привычек</string>
    <string name="your_habits">Ваши привычки</string>
    <string name="empty_list">Вы еще не добавили ни одной привычки</string>
    <string name="add_habit">Добавить привычку</string>
    <string name="habit_title">Заголовок привычки</string>
    <string name="habit_description">Описание привычки</string>
    <string name="habit_priority">Приоритет привычки</string>
    <string name="habit_type">Тип привычки:</string>
    <string name="habit_count">Сколько раз выполнить</string>
    <string name="habit_period">За период</string>

    <string name="submit">Отправить</string>
    <string name="save">Сохранить</string>

    <string name="work">Работа</string>
    <string name="study">Учеба</string>
    <string name="health">Здоровье</string>
    <string name="family">Семья</string>
    <string name="life">Быт</string>

    <string name="add">Добавить</string>
    <string name="spinner_header">Выберите приоритет:</string>

    <string-array name="priority">
        <item>Не важно</item>
        <item>Важно</item>
        <item>Очень важно</item>
    </string-array>

    <string name="error_empty_title">Заголовок привычки обязателен!</string>
    <string name="delete">
        <u>Удалить</u>
    </string>
    <string name="good">Хорошие</string>
    <string name="bad">Плохие</string>
    <string name="menu_home">На главную</string>
    <string name="menu_about">О приложении</string>
    <string name="hello">Добро подаловать!</string>
    <string name="menu">Меню</string>
    <string name="error_empty_type">Выберите тип привычки!</string>
    <string name="about_app_title">О приложении</string>
    <string name="about_app_text">Приложение «Трекер привычек» позволит контролировать ваши привычки: вырабатывать
        хорошие и отказываться от плохих.
    </string>
    <string name="about_app_version">Версия: 1.0.0</string>
    <string name="habits">Привычки</string>
    <string name="empty_list_good_habits">Хорошие привычки не добавлены</string>
    <string name="empty_list_bad_habits">Привычки не добавлены</string>
    <string name="delim">раз /</string>
    <string name="reply">повторить</string>
</resources>
