<?xml version="1.0" encoding="utf-8"?>


<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@color/cardview_dark_background"
                android:padding="20dp"
                android:layout_height="wrap_content"
                tools:ignore="PrivateResource">

            <ImageView
                    android:src="@drawable/ic_idea"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/add_habit"/>

            <TextView
                    android:text="@string/add_habit"
                    android:textColor="@color/white"
                    android:layout_marginStart="20sp"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/layout"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/title_item"
                    android:hint="@string/habit_title"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"/>

            <EditText
                    android:id="@+id/description_item"
                    android:hint="@string/habit_description"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <Spinner
                    android:id="@+id/priority_item"
                    android:spinnerMode="dialog"
                    android:prompt="@string/spinner_header"
                    android:padding="10sp"
                    android:entries="@array/priority"
                    android:layout_marginTop="@dimen/spinner_margin"
                    android:layout_marginBottom="@dimen/spinner_margin"
                    android:background="@drawable/spinner_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/type_key"
                    android:text="@string/habit_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <org.apmem.tools.layouts.FlowLayout
                        android:id="@+id/radio_group_item"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                    <RadioButton
                            android:text="@string/work"
                            android:id="@+id/work"
                            android:tag="@string/work"
                            android:checked="true"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>

                    <RadioButton
                            android:text="@string/study"
                            android:id="@+id/study"
                            android:tag="@string/study"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>

                    <RadioButton
                            android:text="@string/health"
                            android:id="@+id/health"
                            android:tag="@string/health"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>

                    <RadioButton
                            android:text="@string/family"
                            android:id="@+id/family"
                            android:tag="@string/family"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>

                    <RadioButton
                            android:text="@string/life"
                            android:id="@+id/life"
                            android:tag="@string/life"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>

                </org.apmem.tools.layouts.FlowLayout>

            <EditText
                    android:id="@+id/count_item"
                    android:hint="@string/habit_count"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/period_item"
                    android:hint="@string/habit_period"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/save"
                    android:text="@string/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/delete"
                    android:text="@string/delete"
                    android:layout_marginTop="20sp"
                    android:visibility="gone"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>