<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/add_item_form"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

        <include  layout="@layout/header" />

        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout
                    android:id="@+id/layout"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/title_item"
                        android:hint="@string/habit_title"
                        android:inputType="textCapSentences"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"/>

                <EditText
                        android:id="@+id/description_item"
                        android:hint="@string/habit_description"
                        android:importantForAutofill="no"
                        android:inputType="textCapSentences"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                <Spinner
                        android:id="@+id/priority_item"
                        android:spinnerMode="dialog"
                        android:prompt="@string/spinner_header"
                        android:padding="10sp"
                        android:entries="@array/priority"
                        android:layout_marginTop="@dimen/spinner_margin"
                        android:layout_marginBottom="@dimen/spinner_margin"
                        android:background="@drawable/spinner_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                <TextView
                        android:id="@+id/type_key"
                        android:text="@string/habit_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <RadioButton
                            android:text="@string/good"
                            android:id="@+id/good"
                            android:checked="true"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>

                    <RadioButton
                            android:text="@string/bad"
                            android:id="@+id/bad"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>

                </RadioGroup>

                <EditText
                        android:id="@+id/count_item"
                        android:hint="@string/habit_count"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <EditText
                        android:id="@+id/period_item"
                        android:hint="@string/habit_period"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <Button
                        android:id="@+id/save"
                        android:text="@string/save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/delete"
                        android:text="@string/delete"
                        android:layout_marginTop="20sp"
                        android:visibility="gone"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>