<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/main"
        android:orientation="vertical"
        tools:context=".List">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/cardview_dark_background"
            android:padding="20dp"
            android:layout_height="wrap_content"
            tools:ignore="PrivateResource">
        <ImageView
                android:src="@drawable/ic_idea"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name_rus"/>
        <TextView
                android:text="@string/app_name_rus"
                android:textColor="@color/white"
                android:layout_marginStart="20sp"
                android:textSize="25sp"
                android:fontFamily="sans-serif-medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/title_list"
                android:text="@string/title_list"
                android:textStyle="bold"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/empty_list"
                android:visibility="visible"
                android:orientation="vertical">

            <TextView
                    android:text="@string/empty_list"
                    android:includeFontPadding="false"
                    android:layout_marginTop="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>